--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/lodash": "^4.17.4",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.11",
+    "@types/ws": "^8.5.10",
     "cloudinary": "^1.41.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
@@ -37,6 +38,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "react-dropzone": "^14.2.3",
-    "router": "^1.3.8"
+    "router": "^1.3.8",
+    "ws": "^8.17.0"
   }
 }
