--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,13 @@
 {
 	"compilerOptions": {
-		"module": "NodeNext",
-		"moduleResolution": "NodeNext",
-		"baseUrl": "src",
-		"outDir": "dist",
-		"sourceMap": true,
-		"noImplicitAny": true,
+	  "module": "NodeNext",
+	  "moduleResolution": "NodeNext",
+	  "baseUrl": "src",
+	  "outDir": "dist",
+	  "sourceMap": true,
+	  "noImplicitAny": true,
+	  "skipLibCheck": true,
 	},
-	"include": ["src/**/*"],
-}
+	"include": ["src/**/*", "src/utils/custom.d.ts"]
+  }
+  
